--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 
     <div class="wrapper">
 
-        <h2 class="footer-heading">{{ site.title | escape }}</h2>
+        <!--<h2 class="footer-heading">{{ site.title | escape }}</h2>-->
 
         <div class="footer-col-wrapper">
         <div class="footer-col footer-col-1">
