--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,10 @@
 <!-- Overwrite default header from "minima" theme -->
 <!-- Header bar with Red Hat and Red Hat Developer Program logos and links -->
 <div id="rhbar" style="height:40px;background-color: #202020">
-    <a class="rhd-logo" href="http://developers.redhat.com" style="float: right;background-image: url(http://static.jboss.org/images/rhbar/rhd_reverse.png);background-repeat: no-repeat;height: 40px;width: 136px;"></a>
-    <a class="rhlogo" href="http://www.redhat.com/" style="float: right;background-image: url(http://static.jboss.org/images/rhbar/redhatlogo_reverse.png);background-repeat: no-repeat;height: 40px;width: 85px;"></a>
+    <a href="http://developers.redhat.com" style="float: right;background-image: url(http://static.jboss.org/images/rhbar/rhd_reverse.png);background-repeat: no-repeat;height: 40px;width: 136px;"></a>
+    <a href="http://www.redhat.com/" style="float: right;background-image: url(http://static.jboss.org/images/rhbar/redhatlogo_reverse.png);background-repeat: no-repeat;height: 40px;width: 85px;"></a>
+</div>
+<div align="center">
+    <br />
+    <img alt="Strimzi" src="https://raw.githubusercontent.com/strimzi/strimzi/master/documentation/logo/strimzi.png" height="30%" width="30%" />
 </div>
