Added a simple header menu Added a "coming soon" blog page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,3 +8,14 @@
     <br />
     <img alt="Strimzi" src="https://raw.githubusercontent.com/strimzi/strimzi/master/documentation/logo/strimzi.png" height="30%" width="30%" />
 </div>
+</br>
+<nav>
+    <header align="center">
+    {% for item in site.data.menu.header %}
+    <a href="{{ item.url }}" alt="{{ item.title }}">{{ item.title }}</a>
+    {% if forloop.last == false %}
+    |
+    {% endif %}
+    {% endfor %}
+    </header>
+</nav>
