--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 </div>
 <div align="center">
     <br />
-    <img alt="Strimzi" src="https://raw.githubusercontent.com/strimzi/strimzi/master/documentation/logo/strimzi.png" height="30%" />
+    <img alt="Strimzi" src="https://raw.githubusercontent.com/strimzi/strimzi/master/documentation/logo/strimzi.png" />
 </div>
 </br>
 <nav>
