--- a/assets/main.css
+++ b/assets/main.css
@@ -45,7 +45,18 @@ main {
  */
 img {
   max-width: 100%;
-  vertical-align: middle; }
+  vertical-align: middle; 
+  height: auto;
+}
+
+/**
+ *
+ */
+nav {
+  vertical-align: middle; 
+  margin-left: auto;
+  margin-right: auto;
+}
 
 /**
  * Figures
