Added check on author without Twitter account

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,11 @@ layout: default
         by
         <span itemprop="author" itemscope itemtype="http://schema.org/Person">
             <span class="p-author h-card" itemprop="name">
+                {%- if author.twitter -%}
                 <a href="{{ author.twitter }}" target="_blank">{{ author.name }}</a>
+                {%- else -%}
+                {{ author.name }}
+                {%- endif -%}
             </span>
         </span>
       {%- endif -%}</p>
