Adding Google Analytics Tag to Header
Inserting Google Analytics Tag to begin site traffic analysis

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,13 @@
 <!-- Overwrite default header from "minima" theme -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125249459-1"></script>
+<!-- Google Analytics Tag -->
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-125249459-1');
+</script>
 <!-- Header bar with Red Hat and Red Hat Developer Program logos and links -->
 <div id="rhbar" style="height:40px;background-color: #202020">
     <a href="http://developers.redhat.com" style="float: right;background-image: url(http://static.jboss.org/images/rhbar/rhd_reverse.png);background-repeat: no-repeat;height: 40px;width: 136px;"></a>
