Use https when pulling images from other domains.
Also use https links when external sites redirect http to https anyway.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,7 +36,7 @@
     <div class="container" id="companyfooter">
         <div class="redhatlogo" style="text-align:center;">
             <div id="logospacer"></div>
-            <a href="http://www.redhat.com/"><img alt="Red Hat" src="http://static.jboss.org/images/rhbar/redhatlogo.png"></a>
+            <a href="https://www.redhat.com/"><img alt="Red Hat" src="https://static.jboss.org/images/rhbar/redhatlogo.png"></a>
         </div>
     </div>
 </footer>  
