--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,7 +36,7 @@
     <div class="container" id="companyfooter">
         <div class="redhatlogo" style="text-align:center;">
             <div id="logospacer"></div>
-            <a href="https://www.redhat.com/"><img alt="Red Hat" src="https://static.jboss.org/images/rhbar/redhatlogo.png"></a>
+            <a href="https://www.redhat.com/"><img alt="Red Hat" src="/assets/Logo-Red_Hat-Sponsored_By-B-Standard-RGB.svg" width="200"></a>
         </div>
     </div>
 </footer>  
