Website SEO for blog authors

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,6 +25,9 @@ comments: true
                 {%- else -%}
                 {{ author.name }}
                 {%- endif -%}
+                {%- if author.website -%}
+                &nbsp;(<a href="{{ author.website }}" target="_blank" alt="website">website</a>)
+                {%- endif -%}
             </span>
         </span>
       {%- endif -%}</p>
