--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -2,7 +2,7 @@
 <script>
 
 var disqus_config = function () {
-this.page.url = "http://strimzi.io{{ page.url }}";  // Replace PAGE_URL with your page's canonical URL variable
+this.page.url = "https://strimzi.io{{ page.url }}";  // Replace PAGE_URL with your page's canonical URL variable
 this.page.identifier = "{{ page.id }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 
