--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
 </script>
 <div align="center">
     <br />
-    <img alt="Strimzi" src="https://raw.githubusercontent.com/strimzi/strimzi-kafka-operator/master/documentation/logo/strimzi.png" />
+    <img alt="Strimzi" src="assets/strimzi.png" />
 </div>
 </br>
 <nav>
