Use absolute address to the log (#112)
* Use absolute address to the log

Signed-off-by: Jakub Scholz <www@scholzj.com>

* Use absolute address to the log

Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
 </script>
 <div align="center">
     <br />
-    <img alt="Strimzi" src="assets/strimzi.png" />
+    <img alt="Strimzi" src="/assets/strimzi.png" />
 </div>
 </br>
 <nav>
