Typo fix in footer
Signed-off-by: Gunnar Morling <gunnar.morling@googlemail.com>

--- a/_includes/project-footer.html
+++ b/_includes/project-footer.html
@@ -17,7 +17,7 @@
     </div>
     <div class="width-3-12 width-12-12-m justify-self-center align-self-center">
       <p>
-        Strimzi is lincenced under the<br/>
+        Strimzi is licensed under the<br/>
         <a href="https://strimzi.io/LICENSE">Apache Licence, Version 2.0</a>
       </p>
     </div>
