Fixed link to the latest release for changes
Signed-off-by: Paolo Patierno <ppatierno@live.com>

--- a/_includes/downloads/downloads-release-band.html
+++ b/_includes/downloads/downloads-release-band.html
@@ -91,7 +91,7 @@
       </div>
 
     <div class="width-12-12">
-      <p>Full list of changes can be found under the <a href="{{site.baseurl}}/docs/overview/latest/">{{site.data.releases.operator[0].version}} milestone</a>.</p>
+      <p>Full list of changes can be found under the <a href="https://github.com/strimzi/strimzi-kafka-operator/releases/tag/{{site.data.releases.operator[0].version}}">{{site.data.releases.operator[0].version}} release</a>.</p>
       <p><strong>Upgrading from Strimzi {{site.data.releases.operator[1].version}}? See the <a href="{{site.baseurl}}/documentation/">documentation</a> for upgrade instructions.</strong></p>
     </div>
   </div>
