--- a/_includes/homepage/homepage-hero-band.html
+++ b/_includes/homepage/homepage-hero-band.html
@@ -35,7 +35,7 @@
         <p>
           <ul>
             <li>For example kubectl get kafka</li>
-            <li>Operator Based (<a href="{{site.baseurl}}/docs/overview/latest/">What is an operator</a> and why should I use them?)</li>
+            <li>Operator Based (<a href="https://operatorhub.io/what-is-an-operator">What is an operator</a> and why should I use them?)</li>
             <li>Manage Kafka using gitops</li>
           </ul>
         </p>
