--- a/_includes/homepage/homepage-hero-band.html
+++ b/_includes/homepage/homepage-hero-band.html
@@ -35,7 +35,7 @@
         <p>
           <ul>
             <li>For example kubectl get kafka</li>
-            <li>Operator Based (<a href="https://kubernetes.io/docs/concepts/extend-kubernetes/operator/">What is an operator</a>)</li>
+            <li>Operator Based (<a href="https://kubernetes.io/docs/concepts/extend-kubernetes/operator/">What is an operator?</a>)</li>
             <li>Manage Kafka using gitops</li>
           </ul>
         </p>
