Added blog sharing buttons
A lot of the code and images were already in the repo, so enabled it and fine-tuned.

- Updated share-page.html to use correct variables.
- Added the share-page include to posts.html.
- Fixed CSS for outlining.

Signed-off-by: Arie Scheurwater <ariescheurwater@users.noreply.github.com>

--- a/_sass/includes/share-page.scss
+++ b/_sass/includes/share-page.scss
@@ -3,7 +3,9 @@
     text-decoration: none;
     img {
       max-width: 1.5rem;
-      margin-right: .5rem;
+      margin-left: .5rem;
+      margin-bottom: -.35rem;
+      padding-top: .35rem;
     }
   }
 }
