--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,5 +12,6 @@ layout: base
   </div>
   <div class="width-12-12 post-content">
     {{ content }}
+    {% include share-page.html %}
   </div>
 </div>
