Prepare new docs structure, add Deploying book and fix archive
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_layouts/documentation-archive.html
+++ b/_layouts/documentation-archive.html
@@ -3,4 +3,4 @@ layout: base
 ---
 
 {% include documentation/documentation-archive-title-band.html %}
-{% include releases-archives-band.html %}
+{% include documentation/documentation-archive-band.html %}
