--- a/_includes/documentation/documentation-archive-band.html
+++ b/_includes/documentation/documentation-archive-band.html
@@ -12,23 +12,33 @@
       {% for oRelease in site.data.releases.operator %}
         {% if oRelease.version > "0.17.0" %}
           <ul>
-            <li>{{oRelease.version}}</li>
-            <ul>
-              {% if oRelease.overview_book %}<li><a href="{{site.baseurl}}/docs/operators/{{bRelease.version}}/overview/overview.html">Overview guide</a></li>{% endif %}
-              {% if oRelease.quickstart_book %}<li><a href="{{site.baseurl}}/docs/operators/{{bRelease.version}}quickstart/quickstart.html">Quick Start guide</a></li>{% endif %}
-              {% if oRelease.deploying_book %}<li><a href="{{site.baseurl}}/docs/operators/{{bRelease.version}}deploying/deploying.html">Deploying Strimzi</a></li>{% endif %}
-              {% if oRelease.using_book %}<li><a href="{{site.baseurl}}/docs/operators/{{bRelease.version}}/using.html">Using Strimzi</a></li>{% endif %}
-            </ul>
+            <li>{{oRelease.version}}
+              <ul>
+                {% if oRelease.overview_book %}<li><a href="{{site.baseurl}}/docs/operators/{{bRelease.version}}/overview/overview.html">Overview guide</a></li>{% endif %}
+                {% if oRelease.quickstart_book %}<li><a href="{{site.baseurl}}/docs/operators/{{bRelease.version}}quickstart/quickstart.html">Quick Start guide</a></li>{% endif %}
+                {% if oRelease.deploying_book %}<li><a href="{{site.baseurl}}/docs/operators/{{bRelease.version}}deploying/deploying.html">Deploying Strimzi</a></li>{% endif %}
+                {% if oRelease.using_book %}<li><a href="{{site.baseurl}}/docs/operators/{{bRelease.version}}/using.html">Using Strimzi</a></li>{% endif %}
+              </ul>
+            </li>
           </ul>
         {% else %}
           <ul>
-            <li>{{oRelease.version}}</li>
-            <ul>
-              {% if oRelease.overview_book %}<li><a href="{{site.baseurl}}/docs/overview/{{bRelease.version}}">Overview guide</a></li>{% endif %}
-              {% if oRelease.quickstart_book %}<li><a href="{{site.baseurl}}/docs/quickstart/{{bRelease.version}}">Quick Start guide</a></li>{% endif %}
-              {% if oRelease.deploying_book %}<li><a href="{{site.baseurl}}/docs/deploying/{{bRelease.version}}">Deploying Strimzi</a></li>{% endif %}
-              {% if oRelease.using_book %}<li><a href="{{site.baseurl}}/docs/{{bRelease.version}}">Using Strimzi</a></li>{% endif %}
-            </ul>
+            <li>{{oRelease.version}}
+              <ul>
+                {% if oRelease.overview_book %}<li><a href="{{site.baseurl}}/docs/overview/{{bRelease.version}}">Overview guide</a></li>{% endif %}
+                {% if oRelease.quickstart_book %}<li><a href="{{site.baseurl}}/docs/quickstart/{{bRelease.version}}">Quick Start guide</a></li>{% endif %}
+                {% if oRelease.deploying_book %}<li><a href="{{site.baseurl}}/docs/deploying/{{bRelease.version}}">Deploying Strimzi</a></li>{% endif %}
+                {% if oRelease.using_book %}<li><a href="{{site.baseurl}}/docs/{{bRelease.version}}">Using Strimzi</a></li>{% endif %}
+              </ul>
+            </li>
+          </ul>
+
+          <h5>{{oRelease.version}}</h5>
+          <ul>
+            {% if oRelease.overview_book %}<li><a href="{{site.baseurl}}/docs/overview/{{bRelease.version}}">Overview guide</a></li>{% endif %}
+            {% if oRelease.quickstart_book %}<li><a href="{{site.baseurl}}/docs/quickstart/{{bRelease.version}}">Quick Start guide</a></li>{% endif %}
+            {% if oRelease.deploying_book %}<li><a href="{{site.baseurl}}/docs/deploying/{{bRelease.version}}">Deploying Strimzi</a></li>{% endif %}
+            {% if oRelease.using_book %}<li><a href="{{site.baseurl}}/docs/{{bRelease.version}}">Using Strimzi</a></li>{% endif %}
           </ul>
         {% endif %}
       {% endfor %}
