--- a/_includes/documentation/documentation-version-band.html
+++ b/_includes/documentation/documentation-version-band.html
@@ -27,7 +27,7 @@
         Strimzi Kafka operators Master<br>
         <a href="{{site.baseurl}}/docs/operators/master/overview.html">Overview guide</a> | 
         <a href="{{site.baseurl}}/docs/operators/master/quickstart.html">Quick Start guide</a> | 
-        <a href="{{site.baseurl}}/docs/operators/master/deploying.html">Deploying Strimzi</a>
+        <a href="{{site.baseurl}}/docs/operators/master/deploying.html">Deploying Strimzi</a> |
         <a href="{{site.baseurl}}/docs/operators/master/using.html">Using Strimzi</a>
       </p>
       <p>Strimzi Kafka Bridge: <a href="{{site.baseurl}}/docs/bridge/master/">Master</a></p>
