--- a/_includes/documentation/documentation-archive-band.html
+++ b/_includes/documentation/documentation-archive-band.html
@@ -10,7 +10,7 @@
     <div class="width-6-12 width-12-12-m">
       <h4>Strimzi Kafka Operators</h4>
       {% for oRelease in site.data.releases.operator %}
-        {% if oRelease.version > "0.17.0" %}
+        {% if oRelease.version > 0.17.0 %}
           <h5>{{oRelease.version}}</h5>
           <ul>
             {% if oRelease.overview_book %}<li><a href="{{site.baseurl}}/docs/operators/{{oRelease.version}}/overview/overview.html">Overview guide</a></li>{% endif %}
@@ -18,7 +18,7 @@
             {% if oRelease.deploying_book %}<li><a href="{{site.baseurl}}/docs/operators/{{oRelease.version}}deploying/deploying.html">Deploying Strimzi</a></li>{% endif %}
             {% if oRelease.using_book %}<li><a href="{{site.baseurl}}/docs/operators/{{oRelease.version}}/using.html">Using Strimzi</a></li>{% endif %}
           </ul>
-        {% elsif oRelease.version > "0.1.0" %}
+        {% elsif oRelease.version > 0.1.0 %}
           <h5>{{oRelease.version}}</h5>
           <ul>
             {% if oRelease.overview_book %}<li><a href="{{site.baseurl}}/docs/overview/{{oRelease.version}}">Overview guide</a></li>{% endif %}
