--- a/_includes/project-footer.html
+++ b/_includes/project-footer.html
@@ -17,8 +17,11 @@
     </div>
     <div class="width-3-12 width-12-12-m justify-self-center align-self-center">
       <p>
-        Strimzi is licensed under the<br/>
-        <a href="https://strimzi.io/LICENSE">Apache Licence, Version 2.0</a>
+        &copy; Strimzi Authors {{ 'now' | date: "%Y" }} | Documentation distributed under <a href="https://creativecommons.org/licenses/by/4.0">CC-BY-4.0</a>
+      </p>
+
+      <p>
+        &copy; {{ 'now' | date: "%Y" }} The Linux Foundation. All rights reserved. The Linux Foundation has registered trademarks and uses trademarks. For a list of trademarks of The Linux Foundation, please see our <a href="https://www.linuxfoundation.org/trademark-usage/">Trademark Usage</a> page.
       </p>
     </div>
   </div>
