Fix the version in the title
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
   <div class="site-content">
     <div class="grid-wrapper">
       <div class="grid__item width-12-12">
-        <h1>{{ page.title }}</h1>
+        <h1>{{ page.title | replace: '!LATEST_OPERATOR_VERSION!', site.data.releases.operator[0].version | replace: '!LATEST_BRIDGE_VERSION!', site.data.releases.bridge[0].version }}</h1>
       </div>
       <div class="grid__item width-8-12 toc-content">
         {{ content }}
