--- a/_includes/site-header.html
+++ b/_includes/site-header.html
@@ -1,5 +1,5 @@
 <head>
-  <title>{{ page.title }}</title>
+  <title>{{ page.title | replace: '!LATEST_OPERATOR_VERSION!', site.data.releases.operator[0].version | replace: '!LATEST_BRIDGE_VERSION!', site.data.releases.bridge[0].version }}</title>
   <script id="adobe_dtm" src="//www.redhat.com/dtm.js" type="text/javascript"></script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
