--- a/_sass/includes/project-footer.scss
+++ b/_sass/includes/project-footer.scss
@@ -18,6 +18,15 @@
     }
   }
 
+  p.copyright-strimzi {
+    margin-top: 1rem;
+  }
+
+  p.copyright-cncf {
+    font-size:0.8rem;
+    margin-top: 2rem;
+  }
+
   p {
     margin-top: 0;
     margin-bottom: 0;
