Update copyright footer (#146)
* Update copyright footer

Signed-off-by: lucperkins <lucperkins@gmail.com>

* Fix the copyright design

Signed-off-by: Jakub Scholz <www@scholzj.com>

Co-authored-by: Jakub Scholz <www@scholzj.com>

--- a/_includes/project-footer.html
+++ b/_includes/project-footer.html
@@ -6,7 +6,7 @@
         <a href="{{site.baseurl}}/"><img src="{{site.baseurl}}/assets/images/strimzi_logo_alt.png" class="project-logo" title="Project Name"></a>
       </div>
     </div>
-    <div class="width-3-12 width-12-12-m justify-self-center align-self-center">
+    <div class="width-5-12 width-12-12-m justify-self-center align-self-center">
       <p>Strimzi provides a way to run an Apache Kafka cluster on Kubernetes in various deployment configurations.</p>
     </div>
     <div class="width-2-12 width-12-12-m justify-self-center align-self-center">
@@ -15,10 +15,17 @@
         <a href="https://twitter.com/{{ site.twitter_username }}"><i class="fab fa-twitter"></i> strimziio</a>
       </p>
     </div>
-    <div class="width-3-12 width-12-12-m justify-self-center align-self-center">
-      <p>
-        Strimzi is licensed under the<br/>
-        <a href="https://strimzi.io/LICENSE">Apache Licence, Version 2.0</a>
+    <div class="width-1-12"></div>
+  </div>
+  <div class="grid-wrapper">
+    <div class="width-12-12 width-12-12-m justify-self-center align-self-center">
+      <br />
+      <p class="text-centered copyright-strimzi">
+        &copy; Strimzi Authors {{ 'now' | date: "%Y" }} | Documentation distributed under <a href="https://creativecommons.org/licenses/by/4.0">CC-BY-4.0</a>
+      </p>
+      <br />
+      <p class="text-centered copyright-cncf">
+        &copy; {{ 'now' | date: "%Y" }} The Linux Foundation. All rights reserved. The Linux Foundation has registered trademarks and uses trademarks. For a list of trademarks of The Linux Foundation, please see our <a href="https://www.linuxfoundation.org/trademark-usage/">Trademark Usage</a> page.
       </p>
     </div>
   </div>
