Added link to author Twitter handle where applicable
Signed-off-by: Paolo Patierno <ppatierno@live.com>

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,11 @@ layout: base
   </div>
   <div class="width-8-12 width-12-12-m byline-wrapper">
     {% assign author = site.data.authors[page.author] %}
+    {% if author.twitter != null %}
+    <p class="byline">{{ page.date | date: '%B %d, %Y' }} by <a href="{{ author.twitter }}">{{ author.name }}</a></p>
+    {% else %}
     <p class="byline">{{ page.date | date: '%B %d, %Y' }} by {{ author.name }}</p>
+    {% endif %}
   </div>
   <div class="width-12-12 post-content">
     {{ content }}
