Added connectors pages

--- a/_includes/header-navigation.html
+++ b/_includes/header-navigation.html
@@ -18,6 +18,9 @@
         <a href="{{site.baseurl}}/documentation/" class="{% if page.url contains '/documentation/' %}active{% endif %}">Documentation</a>
       </span>
       <span>
+        <a href="{{site.baseurl}}/connectors/" class="{% if page.url contains '/connectors/' %}active{% endif %}">Connectors</a>
+      </span>
+      <span>
         <a href="{{site.baseurl}}/community/" class="{% if page.url contains '/community/' %}active{% endif %}">Community</a>
       </span>
       <span>
