--- a/_sass/strimzi.scss
+++ b/_sass/strimzi.scss
@@ -13,7 +13,7 @@ body {
   line-height: 1.5rem;
 }
 
-body:not(.homepage){
+body:not(.homepage):not(.connectors){
   div.site-content {
     padding-bottom: 6rem;
   }
@@ -304,6 +304,10 @@ blockquote::after{
 
 .text-caps {
   text-transform: uppercase;
+}
+
+.hidden {
+  display: none;
 }
 
 .hide-mobile {
