--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -44,3 +44,4 @@ $baseurl: "{{ site.baseurl }}";
 @import "includes/documentation-resources-band";
 @import "includes/tabs";
 @import "includes/toc";
+@import "includes/connectors-cards-grid";
