--- a/_sass/project-colors.scss
+++ b/_sass/project-colors.scss
@@ -6,6 +6,7 @@ $dark-orange: #B57100;
 $blue: #53B9D7;
 $light-blue: #DCF1F7;
 $dark-blue: #182C46;
+$green: #96BD53;
 
 // Other colors 
 $link : #1F579C;
