Fix archive link
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_includes/documentation/documentation-archive-band.html
+++ b/_includes/documentation/documentation-archive-band.html
@@ -14,7 +14,7 @@
           <h5>{{oRelease.version}}</h5>
           <ul>
             {% if oRelease.overview_book %}<li><a href="{{site.baseurl}}/docs/operators/{{oRelease.version}}/overview.html">Overview guide</a></li>{% endif %}
-            {% if oRelease.quickstart_book %}<li><a href="{{site.baseurl}}/docs/operators/{{oRelease.version}}quickstart.html">Quick Start guide</a></li>{% endif %}
+            {% if oRelease.quickstart_book %}<li><a href="{{site.baseurl}}/docs/operators/{{oRelease.version}}/quickstart.html">Quick Start guide</a></li>{% endif %}
             {% if oRelease.deploying_book %}<li><a href="{{site.baseurl}}/docs/operators/{{oRelease.version}}/deploying.html">Deploying Strimzi</a></li>{% endif %}
             {% if oRelease.using_book %}<li><a href="{{site.baseurl}}/docs/operators/{{oRelease.version}}/using.html">Using Strimzi</a></li>{% endif %}
           </ul>
