Updates doc styles
Signed-off-by: Adela Sofia Arreola <adelaarreola@gmail.com>

--- a/_sass/core/global.scss
+++ b/_sass/core/global.scss
@@ -59,7 +59,7 @@ div.site-content-slim, {
 * {
   font-family: Helvetica, Arial, sans-serif;
   color: $black;
-  line-height: 1rem;
+  line-height: 1.5rem;
 }
 
 h1,h2,h3,h4,h5,h6,p {
@@ -175,13 +175,12 @@ pre,
 code span,
 code > * {
   font-family: monospace;
-  font-size: 1rem;
-  line-height: 1.2;
 }
 
 pre > code {
   padding: .5rem 1rem;
   background-color: transparent;
+  font-size: 1.2em;
 }
 
 hr {
