--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -30,6 +30,7 @@ $baseurl: "{{ site.baseurl }}";
 @import "strimzi";
 @import "layouts/blog";
 @import "layouts/home";
+@import "layouts/default";
 @import "includes/project-footer";
 @import "includes/redhat-footer";
 @import "includes/share-page";
