Add YouTube icon and link to the top and bottom navigation menu
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_includes/project-footer.html
+++ b/_includes/project-footer.html
@@ -13,6 +13,7 @@
       <p>
         <a href="{{ site.github_url }}"><i class="fab fa-github-alt"></i> Strimzi</a><br/>
         <a href="https://twitter.com/{{ site.twitter_username }}"><i class="fab fa-twitter"></i> strimziio</a>
+        <a href="https://www.youtube.com/channel/UCDwPPDhB2_9lzSfYW8AGwnQ"><i class="fab fa-youtube-play"></i> Strimzi</a>
       </p>
     </div>
     <div class="width-1-12"></div>
