--- a/_includes/header-navigation.html
+++ b/_includes/header-navigation.html
@@ -29,6 +29,9 @@
       <span>
         <a href="https://twitter.com/{{site.twitter_username}}" target="_blank"><i class="fab fa-twitter"></i></a>
       </span>
+      <span>
+        <a href="https://www.youtube.com/channel/UCDwPPDhB2_9lzSfYW8AGwnQ" target="_blank"><i class="fab fa-youtube"></i></a>
+      </span>
     </div>
   </div>
       </nav>
