Updates connector pages

--- a/_sass/includes/connectors-cards-grid.scss
+++ b/_sass/includes/connectors-cards-grid.scss
@@ -75,6 +75,9 @@
     .title {
       min-height: 45px;
       margin-bottom: .5rem;
+      color: #2A5D6C;
+      font-weight: 400;
+      font-size: 1.5rem;
     }
 
     i {
