--- a/_includes/homepage/homepage-usedby-band.html
+++ b/_includes/homepage/homepage-usedby-band.html
@@ -7,8 +7,10 @@
     <div class="width-4-12 width-12-12-m logo-img"><img src="{{site.baseurl}}/assets/images/helvetia_logo.png"></div>
     <div class="width-4-12 width-12-12-m logo-img"><img src="{{site.baseurl}}/assets/images/lightbend_logo.png"></div>
     <div class="width-4-12 width-12-12-m logo-img"><img src="{{site.baseurl}}/assets/images/redhat_logo.png"></div>
+    <div class="width-2-12 width-12-12-m"></div>
     <div class="width-4-12 width-12-12-m logo-img"><img src="{{site.baseurl}}/assets/images/axual_logo.png"></div>
     <div class="width-4-12 width-12-12-m logo-img"><img src="{{site.baseurl}}/assets/images/grupomasmovil_logo.png"></div>
+    <div class="width-2-12 width-12-12-m"></div>
   </div>
   <div class="grid-wrapper margin-tb-xl">
     <div class="width-5-12 width-12-12-m cloud-native">
