git push --force-with-lease origin masterAdd announcement and zoom meeting band
home page... added code for announecment band for survey (with blue or orange background) and zoom meeting band. Added zoom meeting to community page too.

Signed-off-by: insectengine <jcobb@redhat.com>

--- a/_includes/community/community-contributions-band.html
+++ b/_includes/community/community-contributions-band.html
@@ -62,4 +62,11 @@
       The simplest and easiest way to help the Strimzi community is to act as a project ambassador, follow us on Twitter, and show up to community events in your area.
     </p>
   </div>
+  <div class="width-3-12 width-12-12-m contrib-block">
+    <img src="{{site.baseurl}}/assets/images/community/community_icon_zoom.svg">
+    <p>
+      <a href="#" target="_blank" class="title">Biweekly Zoom Meeting</a>
+      Join us for our biweekly open community meeting for anyone interested in all things Strimzi.
+    </p>
+  </div>
 </div>
