--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -2,7 +2,9 @@
 layout: base
 ---
 
+{% include homepage/homepage-announcement-band.html %}
 {% include homepage/homepage-hero-band.html %}
 {% include homepage/homepage-download-announcement-band.html %}
+{% include homepage/homepage-zoom-band.html %}
 {% include homepage/homepage-content-band.html %}
 {% include homepage/homepage-usedby-band.html %}
