--- a/_sass/strimzi.scss
+++ b/_sass/strimzi.scss
@@ -462,3 +462,48 @@ blockquote::after{
   text-align: left;
   margin-bottom: 12px; 
 }
+
+.announcement_blue, .announcement_orange {
+  margin: 0 -13rem;
+  padding: 2rem 13rem;
+
+  p {
+  font-size: 1.5rem;
+  line-height: 1.75rem;
+  text-align: center;
+  margin: .5rem;
+  color: $black;
+  }
+
+  a{
+  color: $black !important;
+  }
+}
+
+.announcement_blue {
+background-color: $light-blue;
+}
+.announcement_orange {
+background-color: $orange;
+}
+
+
+/* Zoom band */
+
+.zoom_band {
+  background-color: $light-blue;
+  margin: 0 -13rem;
+  padding: 2rem 13rem;
+
+  p {
+  font-size: 1.5rem;
+  line-height: 1.75rem;
+  margin: .5rem;
+  color: $black;
+  }
+
+  img {
+  max-width: 150px;
+  float: right;
+  }
+}
