Added marlow navigation placement and logo
Signed-off-by: Nikolas Mousouros <nmousouros@localhost.localdomain>

--- a/_includes/homepage/homepage-usedby-band.html
+++ b/_includes/homepage/homepage-usedby-band.html
@@ -11,6 +11,7 @@
     <div class="width-4-12 width-12-12-m logo-img"><img src="{{site.baseurl}}/assets/images/axual_logo.png"></div>
     <div class="width-4-12 width-12-12-m logo-img"><img src="{{site.baseurl}}/assets/images/grupomasmovil_logo.png"></div>
     <div class="width-4-12 width-12-12-m logo-img"><img src="{{site.baseurl}}/assets/images/sbb_logo.svg"></div>
+    <div class="width-4-12 width-12-12-m logo-img"><img src="{{site.baseurl}}/assets/images/marlow-logo.svg"></div>
     <div class="width-2-12 width-12-12-m"></div>
   </div>
   <div class="grid-wrapper margin-tb-xl">
