Added link to Zoom meeting information
Signed-off-by: Paolo Patierno <ppatierno@live.com>

--- a/_includes/community/community-contributions-band.html
+++ b/_includes/community/community-contributions-band.html
@@ -65,7 +65,7 @@
   <div class="width-3-12 width-12-12-m contrib-block">
     <img src="{{site.baseurl}}/assets/images/community/community_icon_zoom.svg">
     <p>
-      <a href="#" target="_blank" class="title">Biweekly Zoom Meeting</a>
+      <a href="https://www.google.com/url?q=https://docs.google.com/document/d/1V1lMeMwn6d2x1LKxyydhjo2c_IFANveelLD880A6bYc/edit&sa=D&source=calendar&ust=1597745670048000&usg=AOvVaw3an1Mqc8F6L2g-9BxhJcgE" target="_blank" class="title">Biweekly Zoom Meeting</a>
       Join us for our biweekly open community meeting for anyone interested in all things Strimzi.
     </p>
   </div>
