--- a/_includes/homepage/homepage-zoom-band.html
+++ b/_includes/homepage/homepage-zoom-band.html
@@ -4,7 +4,7 @@
             <img src="assets/images/zoom_icon.svg">
     </div>
     <div class="width-9-12">
-            <p>Join us for our <a href="#">biweekly community zoom meeting</a> where we discuss in all things Strimzi. </p>
+            <p>Join us for our <a href="https://www.google.com/url?q=https://docs.google.com/document/d/1V1lMeMwn6d2x1LKxyydhjo2c_IFANveelLD880A6bYc/edit&sa=D&source=calendar&ust=1597745670048000&usg=AOvVaw3an1Mqc8F6L2g-9BxhJcgE">biweekly community zoom meeting</a> where we discuss in all things Strimzi. </p>
     </div>
   </div>
 </div>
