--- a/_includes/homepage/homepage-announcement-band.html
+++ b/_includes/homepage/homepage-announcement-band.html
@@ -1,7 +1,7 @@
 <div class="component-slim announcement_orange">
   <div class="grid-wrapper">
     <div class="width-12-12">
-            <p>Take the <a href="https://www.surveymonkey.com/r/strimzi"> Strimzi 2020 survey</a> and let us know how you are using Strimzi. </p>
+            <p>Placeholder for an announcement</p>
     </div>
   </div>
 </div>
