--- a/_includes/homepage/homepage-usedby-band.html
+++ b/_includes/homepage/homepage-usedby-band.html
@@ -8,10 +8,9 @@
     <div class="width-4-12 width-12-12-m logo-img"><img src="{{site.baseurl}}/assets/images/redhat_logo.png"></div>
     <div class="width-4-12 width-12-12-m logo-img"><img src="{{site.baseurl}}/assets/images/lightbend_logo.png"></div>
 
-    <div class="width-2-12 width-12-12-m"></div>
     <div class="width-4-12 width-12-12-m margin-tb-xl logo-img"><img src="{{site.baseurl}}/assets/images/grupomasmovil_logo.png"></div>
     <div class="width-4-12 width-12-12-m margin-tb-xl logo-img"><img src="{{site.baseurl}}/assets/images/sbb_logo.svg"></div>
-    <div class="width-2-12 width-12-12-m"></div>
+    <div class="width-4-12 width-12-12-m margin-tb-xl logo-img"><img src="{{site.baseurl}}/assets/images/swisscom_logo.png"></div>
 
     <div class="width-3-12 width-12-12-m"></div>
     <div class="width-3-12 width-12-12-m logo-img"><img src="{{site.baseurl}}/assets/images/axual_logo.png"></div>
