--- a/_includes/documentation/documentation-version-band.html
+++ b/_includes/documentation/documentation-version-band.html
@@ -10,7 +10,8 @@
         Overview guide: <a href="{{site.baseurl}}/docs/operators/latest/overview.html">{{site.data.releases.operator[0].version}} - latest stable release</a><br/>
         Quick Start guide: <a href="{{site.baseurl}}/docs/operators/latest/quickstart.html">{{site.data.releases.operator[0].version}} - latest stable release</a><br/>
         Deploying Strimzi: <a href="{{site.baseurl}}/docs/operators/latest/deploying.html">{{site.data.releases.operator[0].version}} - latest stable release</a><br/>
-        Using Strimzi: <a href="{{site.baseurl}}/docs/operators/latest/using.html">{{site.data.releases.operator[0].version}} - latest stable release</a>
+        Using Strimzi: <a href="{{site.baseurl}}/docs/operators/latest/using.html">{{site.data.releases.operator[0].version}} - latest stable release</a><br/>
+        Example custom resources: <a href="{{site.github_url}}/strimzi-kafka-operator/tree/{{site.data.releases.operator[0].version}}/examples">{{site.data.releases.operator[0].version}} - latest stable release</a>
       </p>
       <p>
         <strong class="text-caps">Strimzi Kafka Bridge Documentation</strong>
