edit for link name
Signed-off-by: prmellor <pmellor@redhat.com>

--- a/_includes/documentation/documentation-version-band.html
+++ b/_includes/documentation/documentation-version-band.html
@@ -26,9 +26,9 @@
       </p>
       <p>
         Strimzi Kafka operators Master<br>
-        <a href="{{site.baseurl}}/docs/operators/master/overview.html">Overview guide</a> | 
-        <a href="{{site.baseurl}}/docs/operators/master/quickstart.html">Quick Start guide</a> | 
-        <a href="{{site.baseurl}}/docs/operators/master/deploying.html">Deploying Strimzi</a> |
+        <a href="{{site.baseurl}}/docs/operators/master/overview.html">Overview guide</a> |
+        <a href="{{site.baseurl}}/docs/operators/master/quickstart.html">Quick Start guide</a> |
+        <a href="{{site.baseurl}}/docs/operators/master/deploying.html">Deploying and Upgrading Strimzi</a> |
         <a href="{{site.baseurl}}/docs/operators/master/using.html">Using Strimzi</a>
       </p>
       <p>Strimzi Kafka Bridge: <a href="{{site.baseurl}}/docs/bridge/master/">Master</a></p>
