Draft section with supported versions
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_layouts/downloads.html
+++ b/_layouts/downloads.html
@@ -4,4 +4,5 @@ layout: base
 
 {% include downloads/downloads-title-band.html %}
 {% include downloads/downloads-release-band.html %}
+{% include downloads/supported-versions-band.html %}
 {% include releases-archives-band.html %}
