Fix some typos on the Stirmzi website homepage (#217)
* Fix some typos on the Stirmzi website homepage

Signed-off-by: Jakub Scholz <www@scholzj.com>

* Review comments

Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_includes/homepage/homepage-content-band.html
+++ b/_includes/homepage/homepage-content-band.html
@@ -7,10 +7,10 @@
       </div>
       <div class="width-6-12 width-12-12-m">
         <p>
-          Strimzi provides a way to run an Apache Kafka cluster on Kubernetes in various deployment configurations. For development it’s easy to set up a cluster in minikube in a few minutes. For production you can tailor the cluster to your needs, using features such as rack awareness to spread brokers across availability zones, and Kubernetes taints and tolerations to run Kafka on dedicated nodes. You can expose Kafka outside Kubernetes using  NodePort, Load balancer and Ingress, depending on your needs, and these are easily secured using TLS.
+          Strimzi provides a way to run an Apache Kafka cluster on Kubernetes in various deployment configurations. For development it’s easy to set up a cluster in Minikube in a few minutes. For production you can tailor the cluster to your needs, using features such as rack awareness to spread brokers across availability zones, and Kubernetes taints and tolerations to run Kafka on dedicated nodes. You can expose Kafka outside Kubernetes using NodePort, Load balancer, Ingress and OpenShift Routes, depending on your needs, and these are easily secured using TLS.
         </p>
         <p>
-          The Kube-native management of Kafka is not limited to the broker: You can manage Kafka topics, users, mirror maker and Kafka Connect using Custom Resources. This means you can use your familiar kubernetes processes and tooling to manage complete Kafka applications.
+          The Kube-native management of Kafka is not limited to the broker. You can also manage Kafka topics, users, Kafka MirrorMaker and Kafka Connect using Custom Resources. This means you can use your familiar Kubernetes processes and tooling to manage complete Kafka applications.
         </p>
       </div>
       <div class="width-6-12 width-12-12-m">
