--- a/_includes/homepage/homepage-hero-band.html
+++ b/_includes/homepage/homepage-hero-band.html
@@ -14,8 +14,8 @@
         <h4>Secure by Default</h4>
         <p>
           <ul>
-            <li>Out of the Box Security</li>
-            <li>TLS and SCRAM-SHA supported</li>
+            <li>Built-in security</li>
+            <li>TLS, SCRAM-SHA, and OAuth authentication</li>
             <li>Automated Certificate Management</li>
           </ul>
         </p>
@@ -34,9 +34,9 @@
         <h4>Kubernetes-Native Experience</h4>
         <p>
           <ul>
-            <li>For example kubectl get kafka</li>
-            <li>Operator Based (<a href="https://kubernetes.io/docs/concepts/extend-kubernetes/operator/">What is an operator?</a>)</li>
-            <li>Manage Kafka using gitops</li>
+            <li>Use kubectl to manage Kafka</li>
+            <li>Operator-based (<a href="https://kubernetes.io/docs/concepts/extend-kubernetes/operator/">What is an operator?</a>)</li>
+            <li>Manage Kafka using GitOps</li>
           </ul>
         </p>
       </div>
