Rename developing in URL to in-development
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_includes/documentation/documentation-version-band.html
+++ b/_includes/documentation/documentation-version-band.html
@@ -21,19 +21,19 @@
     </div>
     <div class="width-6-12 width-12-12-m">
       <p>
-        <strong class="text-caps">In Progress Documentation</strong>
+        <strong class="text-caps">In Development Documentation</strong>
         <br/>
         The in development documentation corresponds to the Strimzi version which is currently being developed and is in the main branch in our GitHub repositories.
       </p>
       <p>
         Strimzi Kafka operators (In Development)<br>
-        <a href="{{site.baseurl}}/docs/operators/developing/overview.html">Overview guide</a> |
-        <a href="{{site.baseurl}}/docs/operators/developing/quickstart.html">Quick Start guide</a> |
-        <a href="{{site.baseurl}}/docs/operators/developing/deploying.html">Deploying and Upgrading</a> |<br/>
-        <a href="{{site.baseurl}}/docs/operators/developing/using.html">Using Strimzi</a> | 
+        <a href="{{site.baseurl}}/docs/operators/in-development/overview.html">Overview guide</a> |
+        <a href="{{site.baseurl}}/docs/operators/in-development/quickstart.html">Quick Start guide</a> |
+        <a href="{{site.baseurl}}/docs/operators/in-development/deploying.html">Deploying and Upgrading</a> |<br/>
+        <a href="{{site.baseurl}}/docs/operators/in-development/using.html">Using Strimzi</a> | 
         <a href="{{site.github_url}}/strimzi-kafka-operator/tree/main/examples">Example custom resources</a>
       </p>
-      <p>Strimzi Kafka Bridge: <a href="{{site.baseurl}}/docs/bridge/developing/">In Development</a></p>
+      <p>Strimzi Kafka Bridge: <a href="{{site.baseurl}}/docs/bridge/in-development/">In Development</a></p>
     </div>
   </div>
 </div>
