Add link to full docs (#231)
* Add link to full docs

Signed-off-by: Jakub Scholz <www@scholzj.com>

* Fix typos

Signed-off-by: Jakub Scholz <www@scholzj.com>

* Update the archives as well

Signed-off-by: Jakub Scholz <www@scholzj.com>

* Add titles to the links

Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_sass/core/includes/secondary-page-title-band.scss
+++ b/_sass/core/includes/secondary-page-title-band.scss
@@ -1,3 +1,8 @@
 .secondary-page-title-band {
-
+  .documentation-version-band {
+    i {
+      color: $white !important;
+      text-decoration: none;
+    }
+  }
 }
