Add SMART.iX to the users

--- a/_includes/homepage/homepage-usedby-band.html
+++ b/_includes/homepage/homepage-usedby-band.html
@@ -13,6 +13,7 @@
     <div class="width-4-12 width-12-12-m margin-tb-xl logo-img"><img src="{{site.baseurl}}/assets/images/swisscom_logo.png"></div>
 
     <div class="width-3-12 width-12-12-m"></div>
+    <div class="width-3-12 width-12-12-m logo-img"><img src="{{site.baseurl}}/assets/images/smart-ix-logo-colored-transparent.png"></div>
     <div class="width-3-12 width-12-12-m logo-img"><img src="{{site.baseurl}}/assets/images/axual_logo.png"></div>
     <div class="width-3-12 width-12-12-m logo-img"><img src="{{site.baseurl}}/assets/images/marlow-logo.svg"></div>
     <div class="width-3-12 width-12-12-m"></div>
