New Join Us page about community and contributions
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_includes/header-navigation.html
+++ b/_includes/header-navigation.html
@@ -18,8 +18,13 @@
         <a href="{{site.baseurl}}/documentation/" class="{% if page.url contains '/documentation/' %}active{% endif %}">Documentation</a>
       </span>
       <span>
+        <a href="{{site.baseurl}}/join-us/" class="{% if page.url contains '/join-us/' %}active{% endif %}">Join Us</a>
+      </span>
+      {% comment %}
+      <span>
         <a href="{{site.baseurl}}/community/" class="{% if page.url contains '/community/' %}active{% endif %}">Community</a>
       </span>
+      {% endcomment %}
       <span>
         <a href="{{site.baseurl}}/blog/" class="{% if page.url contains '/blog/' %}active{% endif %}">Blog</a>
       </span>
