Fix mixed  up HTML tags
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_includes/join-us/join-us-contribute-to-strimzi-band.html
+++ b/_includes/join-us/join-us-contribute-to-strimzi-band.html
@@ -103,7 +103,7 @@
 
       <p>Our <a href="https://github.com/strimzi/strimzi-kafka-operator/blob/main/development-docs/DEV_GUIDE.md">developer guide</a> should help you to learn how to develop and build the code. 
         If you are using Strimzi, you can contribute features or improvements which you are missing. 
-        You can also check the <a href="https://github.com/strimzi/strimzi-kafka-operator/issues?q=is%3Aopen+is%3Aissue+label%3Agood-start%2C%22help+wanted%22"></a>open issues on GitHub</p> and fix some bugs or implement some enhancements. 
+        You can also check the <a href="https://github.com/strimzi/strimzi-kafka-operator/issues?q=is%3Aopen+is%3Aissue+label%3Agood-start%2C%22help+wanted%22">open issues on GitHub</a> and fix some bugs or implement some enhancements. 
         If you plan to work on some bigger contribution, it might be good idea to check with us first - for example in the <a href="https://slack.cncf.io/"><code>#strimzi-dev</code> channel on CNCF Slack</a>. 
         Bigger changes with major impact on the APIs might require <a href="https://github.com/strimzi/proposals">writing a proposal</a> and having it approved by the community. 
         For small changes and bug fixes, you can just open the PR and we will review it. 
