More review comments
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_includes/join-us/join-us-contribute-to-strimzi-band.html
+++ b/_includes/join-us/join-us-contribute-to-strimzi-band.html
@@ -12,14 +12,17 @@
         We have a <a href="https://slack.cncf.io/"><code>#strimzi</code> channel on the CNCF Slack workspace</a> which you can join and meet other Strimzi users. 
         We also have <a href="https://lists.cncf.io/g/cncf-strimzi-users">user</a> and <a href="https://lists.cncf.io/g/cncf-strimzi-dev">developer</a> mailing lists. 
         You can also come to our <a href="https://github.com/strimzi/strimzi-kafka-operator#strimzi-community-meetings">community calls</a> which happen every two weeks. 
-        On the community calls, you can learn about the current work or future plans. 
+        On the community calls, you will meet the maintainers and other community members.
+        You can learn about the current work or future plans.
+        But you can of course also raise questions, discuss issues you have or just chat about your Strimzi use-cases.
         Don’t forget that in all these places you should follow the <a href="https://github.com/strimzi/governance/blob/main/CODE_OF_CONDUCT.md">code of conduct</a> and just be nice to others!</p>
 
       <h3>Spread the word</h3>
 
       <p>The easiest way you can help Strimzi is by spreading the word. 
         It can start by something simple: <a href="https://github.com/strimzi">star Strimzi repositories on GitHub</a>, subscribe to <a gref="https://youtube.com/c/Strimzi">our YouTube channel</a> or <a href="https://twitter.com/strimziio">follow us on Twitter</a> and like / retweet our tweets. 
-        You can of course also talk about Strimzi on your social media accounts to help more people learn about our project. 
+        You can of course also talk about Strimzi on your social media accounts to help more people learn about our project.
+        And don't forget to tag us, so that we can like or retweet it.
         If you use Strimzi in production, you can add your company to our <a href="https://github.com/strimzi/strimzi-kafka-operator/blob/main/ADOPTERS.md">list of adopters</a>. 
         And you can also add your logo to the <a href="https://strimzi.io/">Strimzi website</a>. 
         The adopters list helps other users to see who already uses Strimzi and might make them more comfortable with using it as well.</p>
@@ -51,9 +54,8 @@
         There might be known issues or incompatibilities.</li>
       <li>Include as many logs and configurations as possible! 
         A single log line or exception or just a small snippet of your custom resource might not be enough to understand the problem and to help. 
-        Ideally either share them directly in your question / issue formatted as code or as an attachment. 
-        Keep in mind that people might not be eager to help if they have to decipher the logs from an upside-down picture of your screen which you took with your smartphone. 
-        The easier you make it, the more likely it is someone will help you.
+        Ideally either share them directly in your question / issue formatted as code or as an attachment.
+        The easier you make it for other to understand your problem or question, the more likely it is someone will help you.
         To collect the available logs and configurations, you can use the <a href="https://github.com/strimzi/strimzi-kafka-operator/blob/main/tools/report.sh">report tool</a> and just share the ZIP archive it generates.</li>
       </ul>
 
