More review comments
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/_includes/join-us/join-us-contribute-to-strimzi-band.html
+++ b/_includes/join-us/join-us-contribute-to-strimzi-band.html
@@ -90,7 +90,7 @@
       <p>You can also help us to improve the quality of our releases and help us test Strimzi. 
         As most modern projects, we rely heavily on <a href="https://strimzi.io/blog/2020/09/21/introduction-to-system-tests/">automated tests</a>. 
         You can always help us improve the tests - you can add new tests to improve the test coverage, improve their execution time and so on. 
-        ut you can also help by manually testing Strimzi in different configurations, environments and in different use-cases and report the results and any issues you found.</p>
+        But you can also help by manually testing Strimzi in different configurations, environments and in different use-cases and report the results and any issues you found.</p>
 
       <p>Every Strimzi release starts with a release candidate. 
         Testing the RCs in your environments with your configurations and making sure everything works before the final release is done is also very helpful. 
